# mevy-bot

./: .gitignore  .pylintrc  Dockerfile  Dockerfile.backup  Dockerfile.dev  Dockerfile.heavy  README.md  TODO  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml
data_definition/: auto_sources.json
devstack/: .env.postgres-db  docker-compose.yml
devstack/hardhat-network/: Dockerfile
mevy_bot/: __main__.py  app.py  file_reader.py  file_splitter.py  path_finder.py  query_handler.py  text_chunker.py
mevy_bot/authentication/: authentication_handler.py  bearer_authentication.py  cookie_authentication.py
mevy_bot/blockchain/: blockchain_handler.py
mevy_bot/classifier/: classifier.py  openai_classifier.py
mevy_bot/database/: database_handler.py  redis_handler.py
mevy_bot/dtos/: user.py
mevy_bot/embedder/: cost_predictor.py  human_number.py  openai_embedder.py  qdrant_embedding_converter.py  token_calculator.py
mevy_bot/etl/: gdrive_etl.py  legifrance_etl.py  workflow_etl.py  workflow_logger.py
mevy_bot/exceptions/: no_response_error.py  unsupported_file_type_error.py  vector_store_not_initialized_error.py  workflows.py
mevy_bot/factories/: workflow_factory.py
mevy_bot/gateways/: openai_gateway.py
mevy_bot/generator/: generator.py  openai_generator.py
mevy_bot/legifrance/: law_text_downloader.py
mevy_bot/models/: blockchain.py  legifrance.py  openai.py  user.py  workflows.py
mevy_bot/query_handler/: openai_query_handler.py  query_handler.py
mevy_bot/rest_api/: main.py
mevy_bot/rewriter/: openai_rewriter.py  rewriter.py
mevy_bot/routers/: auth.py  chat.py  document.py  etl.py  healthcheck.py  legifrance.py  main.py  vector_store.py
mevy_bot/services/: document_verifier_service.py  gdrive_cache_service.py  (+5 more)
n8n-sandbox/: docker-compose.yml
scripts/: user.py
tests/: test_authentication_handler.py
(+16 files in other folders)
