[tool.poetry]
name = "mevy-bot"
version = "0.1.0"
description = ""
authors = ["williammadie <william.madie0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.2"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.1"
openai = "^1.51.2"
pypdf = "^5.0.1"
tiktoken = "^0.8.0"
langchain-openai = "^0.2.2"
faiss-cpu = "^1.9.0"
pandas = "^2.2.3"
langchain-ollama = "^0.2.2"
pypdf2 = "^3.0.1"
qdrant-client = "^1.12.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
autopep8 = "^2.3.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"